lab2/parser.out
Grammar:

Rule 0     S' -> statements
Rule 1     statements -> stmt_braces
Rule 2     statements -> statements stmt_braces
Rule 3     stmt -> RETURN expr ;
Rule 4     stmt -> CONTINUE ;
Rule 5     stmt -> BREAK ;
Rule 6     stmt -> print_stmt
Rule 7     stmt -> assign_expr
Rule 8     stmt -> for_stmt
Rule 9     stmt -> while_stmt
Rule 10    stmt -> if_stmt
Rule 11    stmt -> ;
Rule 12    if_stmt -> IF ( bool_expr ) stmt_braces  [precedence=nonassoc, level=1]
Rule 13    if_stmt -> IF ( bool_expr ) stmt_braces ELSE stmt_braces  [precedence=nonassoc, level=2]
Rule 14    while_stmt -> WHILE ( bool_expr ) stmt_braces
Rule 15    for_stmt -> FOR ID = id_int : id_int stmt_braces
Rule 16    id_int -> INTNUM
Rule 17    id_int -> ID
Rule 18    stmt_braces -> stmt
Rule 19    stmt_braces -> { statements }
Rule 20    print_stmt -> PRINT print_rek ;
Rule 21    print_rek -> value
Rule 22    print_rek -> print_rek , value
Rule 23    value -> STRING
Rule 24    value -> ID
Rule 25    value -> FLOAT
Rule 26    value -> INTNUM
Rule 27    inv_num -> SUB FLOAT
Rule 28    inv_num -> SUB INTNUM
Rule 29    inv_num -> SUB ID
Rule 30    expr -> matrix_ref
Rule 31    expr -> matrix_funcs
Rule 32    expr -> matrix_transpose
Rule 33    expr -> matrix_bin_expr
Rule 34    expr -> relation_expr
Rule 35    expr -> assign_expr
Rule 36    expr -> bin_expr
Rule 37    expr -> inv_num
Rule 38    expr -> value
Rule 39    bool_expr -> relation_expr
Rule 40    bool_expr -> bin_expr
Rule 41    bin_expr -> expr DIV expr  [precedence=left, level=5]
Rule 42    bin_expr -> expr MUL expr  [precedence=left, level=5]
Rule 43    bin_expr -> expr SUB expr  [precedence=left, level=4]
Rule 44    bin_expr -> expr ADD expr  [precedence=left, level=4]
Rule 45    assign_expr -> id_ref DIVASSIGN expr ;
Rule 46    assign_expr -> id_ref MULASSIGN expr ;
Rule 47    assign_expr -> id_ref SUBASSIGN expr ;
Rule 48    assign_expr -> id_ref ADDASSIGN expr ;
Rule 49    assign_expr -> id_ref = matrix ;
Rule 50    assign_expr -> id_ref = expr ;
Rule 51    id_ref -> matrix_ref
Rule 52    id_ref -> ID
Rule 53    relation_expr -> expr NEQ expr  [precedence=nonassoc, level=3]
Rule 54    relation_expr -> expr EQ expr  [precedence=nonassoc, level=3]
Rule 55    relation_expr -> expr GTE expr  [precedence=nonassoc, level=3]
Rule 56    relation_expr -> expr LTE expr  [precedence=nonassoc, level=3]
Rule 57    relation_expr -> expr GT expr  [precedence=nonassoc, level=3]
Rule 58    relation_expr -> expr LT expr  [precedence=nonassoc, level=3]
Rule 59    matrix_bin_expr -> expr DOTDIV expr  [precedence=left, level=7]
Rule 60    matrix_bin_expr -> expr DOTMUL expr  [precedence=left, level=7]
Rule 61    matrix_bin_expr -> expr DOTSUB expr  [precedence=left, level=6]
Rule 62    matrix_bin_expr -> expr DOTADD expr  [precedence=left, level=6]
Rule 63    matrix_transpose -> matrix '
Rule 64    matrix_transpose -> ID '
Rule 65    matrix_funcs -> EYE ( INTNUM )
Rule 66    matrix_funcs -> ONES ( INTNUM )
Rule 67    matrix_funcs -> ZEROS ( INTNUM )
Rule 68    matrix_ref -> ID [ string_of_num ]
Rule 69    matrix -> [ matrix_rows ]
Rule 70    matrix -> [ ]
Rule 71    matrix_rows -> matrix_rows , matrix_row
Rule 72    matrix_rows -> matrix_row
Rule 73    matrix_row -> [ string_of_num ]
Rule 74    matrix_row -> [ ]
Rule 75    string_of_num -> string_of_num , INTNUM
Rule 76    string_of_num -> INTNUM

Terminals, with rules where they appear:

'                    : 63 64
(                    : 12 13 14 65 66 67
)                    : 12 13 14 65 66 67
,                    : 22 71 75
:                    : 15
;                    : 3 4 5 11 20 45 46 47 48 49 50
=                    : 15 49 50
ADD                  : 44
ADDASSIGN            : 48
BREAK                : 5
CONTINUE             : 4
DIV                  : 41
DIVASSIGN            : 45
DOTADD               : 62
DOTDIV               : 59
DOTMUL               : 60
DOTSUB               : 61
ELSE                 : 13
EQ                   : 54
EYE                  : 65
FLOAT                : 25 27
FOR                  : 15
GT                   : 57
GTE                  : 55
ID                   : 15 17 24 29 52 64 68
IF                   : 12 13
INTNUM               : 16 26 28 65 66 67 75 76
LT                   : 58
LTE                  : 56
MUL                  : 42
MULASSIGN            : 46
NEQ                  : 53
ONES                 : 66
PRINT                : 20
RETURN               : 3
STRING               : 23
SUB                  : 27 28 29 43
SUBASSIGN            : 47
WHILE                : 14
ZEROS                : 67
[                    : 68 69 70 73 74
]                    : 68 69 70 73 74
error                : 
{                    : 19
}                    : 19

Nonterminals, with rules where they appear:

assign_expr          : 7 35
bin_expr             : 36 40
bool_expr            : 12 13 14
expr                 : 3 41 41 42 42 43 43 44 44 45 46 47 48 50 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62
for_stmt             : 8
id_int               : 15 15
id_ref               : 45 46 47 48 49 50
if_stmt              : 10
inv_num              : 37
matrix               : 49 63
matrix_bin_expr      : 33
matrix_funcs         : 31
matrix_ref           : 30 51
matrix_row           : 71 72
matrix_rows          : 69 71
matrix_transpose     : 32
print_rek            : 20 22
print_stmt           : 6
relation_expr        : 34 39
statements           : 2 19 0
stmt                 : 18
stmt_braces          : 1 2 12 13 13 14 15
string_of_num        : 68 73 75
value                : 21 22 38
while_stmt           : 9


state 0

    (0) S' -> . statements
    (1) statements -> . stmt_braces
    (2) statements -> . statements stmt_braces
    (18) stmt_braces -> . stmt
    (19) stmt_braces -> . { statements }
    (3) stmt -> . RETURN expr ;
    (4) stmt -> . CONTINUE ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . print_stmt
    (7) stmt -> . assign_expr
    (8) stmt -> . for_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . if_stmt
    (11) stmt -> . ;
    (20) print_stmt -> . PRINT print_rek ;
    (45) assign_expr -> . id_ref DIVASSIGN expr ;
    (46) assign_expr -> . id_ref MULASSIGN expr ;
    (47) assign_expr -> . id_ref SUBASSIGN expr ;
    (48) assign_expr -> . id_ref ADDASSIGN expr ;
    (49) assign_expr -> . id_ref = matrix ;
    (50) assign_expr -> . id_ref = expr ;
    (15) for_stmt -> . FOR ID = id_int : id_int stmt_braces
    (14) while_stmt -> . WHILE ( bool_expr ) stmt_braces
    (12) if_stmt -> . IF ( bool_expr ) stmt_braces
    (13) if_stmt -> . IF ( bool_expr ) stmt_braces ELSE stmt_braces
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    (68) matrix_ref -> . ID [ string_of_num ]
    {               shift and go to state 4
    RETURN          shift and go to state 5
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    ;               shift and go to state 6
    PRINT           shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 17

    statements                     shift and go to state 1
    stmt_braces                    shift and go to state 2
    stmt                           shift and go to state 3
    print_stmt                     shift and go to state 9
    assign_expr                    shift and go to state 10
    for_stmt                       shift and go to state 11
    while_stmt                     shift and go to state 12
    if_stmt                        shift and go to state 13
    id_ref                         shift and go to state 15
    matrix_ref                     shift and go to state 20

state 1

    (0) S' -> statements .
    (2) statements -> statements . stmt_braces
    (18) stmt_braces -> . stmt
    (19) stmt_braces -> . { statements }
    (3) stmt -> . RETURN expr ;
    (4) stmt -> . CONTINUE ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . print_stmt
    (7) stmt -> . assign_expr
    (8) stmt -> . for_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . if_stmt
    (11) stmt -> . ;
    (20) print_stmt -> . PRINT print_rek ;
    (45) assign_expr -> . id_ref DIVASSIGN expr ;
    (46) assign_expr -> . id_ref MULASSIGN expr ;
    (47) assign_expr -> . id_ref SUBASSIGN expr ;
    (48) assign_expr -> . id_ref ADDASSIGN expr ;
    (49) assign_expr -> . id_ref = matrix ;
    (50) assign_expr -> . id_ref = expr ;
    (15) for_stmt -> . FOR ID = id_int : id_int stmt_braces
    (14) while_stmt -> . WHILE ( bool_expr ) stmt_braces
    (12) if_stmt -> . IF ( bool_expr ) stmt_braces
    (13) if_stmt -> . IF ( bool_expr ) stmt_braces ELSE stmt_braces
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    (68) matrix_ref -> . ID [ string_of_num ]
    {               shift and go to state 4
    RETURN          shift and go to state 5
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    ;               shift and go to state 6
    PRINT           shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 17

    stmt_braces                    shift and go to state 21
    stmt                           shift and go to state 3
    print_stmt                     shift and go to state 9
    assign_expr                    shift and go to state 10
    for_stmt                       shift and go to state 11
    while_stmt                     shift and go to state 12
    if_stmt                        shift and go to state 13
    id_ref                         shift and go to state 15
    matrix_ref                     shift and go to state 20

state 2

    (1) statements -> stmt_braces .
    {               reduce using rule 1 (statements -> stmt_braces .)
    RETURN          reduce using rule 1 (statements -> stmt_braces .)
    CONTINUE        reduce using rule 1 (statements -> stmt_braces .)
    BREAK           reduce using rule 1 (statements -> stmt_braces .)
    ;               reduce using rule 1 (statements -> stmt_braces .)
    PRINT           reduce using rule 1 (statements -> stmt_braces .)
    FOR             reduce using rule 1 (statements -> stmt_braces .)
    WHILE           reduce using rule 1 (statements -> stmt_braces .)
    IF              reduce using rule 1 (statements -> stmt_braces .)
    ID              reduce using rule 1 (statements -> stmt_braces .)
    $end            reduce using rule 1 (statements -> stmt_braces .)
    }               reduce using rule 1 (statements -> stmt_braces .)


state 3

    (18) stmt_braces -> stmt .
    {               reduce using rule 18 (stmt_braces -> stmt .)
    RETURN          reduce using rule 18 (stmt_braces -> stmt .)
    CONTINUE        reduce using rule 18 (stmt_braces -> stmt .)
    BREAK           reduce using rule 18 (stmt_braces -> stmt .)
    ;               reduce using rule 18 (stmt_braces -> stmt .)
    PRINT           reduce using rule 18 (stmt_braces -> stmt .)
    FOR             reduce using rule 18 (stmt_braces -> stmt .)
    WHILE           reduce using rule 18 (stmt_braces -> stmt .)
    IF              reduce using rule 18 (stmt_braces -> stmt .)
    ID              reduce using rule 18 (stmt_braces -> stmt .)
    $end            reduce using rule 18 (stmt_braces -> stmt .)
    }               reduce using rule 18 (stmt_braces -> stmt .)
    ELSE            reduce using rule 18 (stmt_braces -> stmt .)


state 4

    (19) stmt_braces -> { . statements }
    (1) statements -> . stmt_braces
    (2) statements -> . statements stmt_braces
    (18) stmt_braces -> . stmt
    (19) stmt_braces -> . { statements }
    (3) stmt -> . RETURN expr ;
    (4) stmt -> . CONTINUE ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . print_stmt
    (7) stmt -> . assign_expr
    (8) stmt -> . for_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . if_stmt
    (11) stmt -> . ;
    (20) print_stmt -> . PRINT print_rek ;
    (45) assign_expr -> . id_ref DIVASSIGN expr ;
    (46) assign_expr -> . id_ref MULASSIGN expr ;
    (47) assign_expr -> . id_ref SUBASSIGN expr ;
    (48) assign_expr -> . id_ref ADDASSIGN expr ;
    (49) assign_expr -> . id_ref = matrix ;
    (50) assign_expr -> . id_ref = expr ;
    (15) for_stmt -> . FOR ID = id_int : id_int stmt_braces
    (14) while_stmt -> . WHILE ( bool_expr ) stmt_braces
    (12) if_stmt -> . IF ( bool_expr ) stmt_braces
    (13) if_stmt -> . IF ( bool_expr ) stmt_braces ELSE stmt_braces
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    (68) matrix_ref -> . ID [ string_of_num ]
    {               shift and go to state 4
    RETURN          shift and go to state 5
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    ;               shift and go to state 6
    PRINT           shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 17

    statements                     shift and go to state 22
    stmt_braces                    shift and go to state 2
    stmt                           shift and go to state 3
    print_stmt                     shift and go to state 9
    assign_expr                    shift and go to state 10
    for_stmt                       shift and go to state 11
    while_stmt                     shift and go to state 12
    if_stmt                        shift and go to state 13
    id_ref                         shift and go to state 15
    matrix_ref                     shift and go to state 20

state 5

    (3) stmt -> RETURN . expr ;
    (30) expr -> . matrix_ref
    (31) expr -> . matrix_funcs
    (32) expr -> . matrix_transpose
    (33) expr -> . matrix_bin_expr
    (34) expr -> . relation_expr
    (35) expr -> . assign_expr
    (36) expr -> . bin_expr
    (37) expr -> . inv_num
    (38) expr -> . value
    (68) matrix_ref -> . ID [ string_of_num ]
    (65) matrix_funcs -> . EYE ( INTNUM )
    (66) matrix_funcs -> . ONES ( INTNUM )
    (67) matrix_funcs -> . ZEROS ( INTNUM )
    (63) matrix_transpose -> . matrix '
    (64) matrix_transpose -> . ID '
    (59) matrix_bin_expr -> . expr DOTDIV expr
    (60) matrix_bin_expr -> . expr DOTMUL expr
    (61) matrix_bin_expr -> . expr DOTSUB expr
    (62) matrix_bin_expr -> . expr DOTADD expr
    (53) relation_expr -> . expr NEQ expr
    (54) relation_expr -> . expr EQ expr
    (55) relation_expr -> . expr GTE expr
    (56) relation_expr -> . expr LTE expr
    (57) relation_expr -> . expr GT expr
    (58) relation_expr -> . expr LT expr
    (45) assign_expr -> . id_ref DIVASSIGN expr ;
    (46) assign_expr -> . id_ref MULASSIGN expr ;
    (47) assign_expr -> . id_ref SUBASSIGN expr ;
    (48) assign_expr -> . id_ref ADDASSIGN expr ;
    (49) assign_expr -> . id_ref = matrix ;
    (50) assign_expr -> . id_ref = expr ;
    (41) bin_expr -> . expr DIV expr
    (42) bin_expr -> . expr MUL expr
    (43) bin_expr -> . expr SUB expr
    (44) bin_expr -> . expr ADD expr
    (27) inv_num -> . SUB FLOAT
    (28) inv_num -> . SUB INTNUM
    (29) inv_num -> . SUB ID
    (23) value -> . STRING
    (24) value -> . ID
    (25) value -> . FLOAT
    (26) value -> . INTNUM
    (69) matrix -> . [ matrix_rows ]
    (70) matrix -> . [ ]
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    ID              shift and go to state 33
    EYE             shift and go to state 35
    ONES            shift and go to state 37
    ZEROS           shift and go to state 38
    SUB             shift and go to state 40
    STRING          shift and go to state 42
    FLOAT           shift and go to state 41
    INTNUM          shift and go to state 36
    [               shift and go to state 34

    expr                           shift and go to state 23
    matrix_ref                     shift and go to state 24
    matrix_funcs                   shift and go to state 25
    matrix_transpose               shift and go to state 26
    matrix_bin_expr                shift and go to state 27
    relation_expr                  shift and go to state 28
    assign_expr                    shift and go to state 29
    bin_expr                       shift and go to state 30
    inv_num                        shift and go to state 31
    value                          shift and go to state 32
    matrix                         shift and go to state 39
    id_ref                         shift and go to state 15

state 6

    (11) stmt -> ; .
    {               reduce using rule 11 (stmt -> ; .)
    RETURN          reduce using rule 11 (stmt -> ; .)
    CONTINUE        reduce using rule 11 (stmt -> ; .)
    BREAK           reduce using rule 11 (stmt -> ; .)
    ;               reduce using rule 11 (stmt -> ; .)
    PRINT           reduce using rule 11 (stmt -> ; .)
    FOR             reduce using rule 11 (stmt -> ; .)
    WHILE           reduce using rule 11 (stmt -> ; .)
    IF              reduce using rule 11 (stmt -> ; .)
    ID              reduce using rule 11 (stmt -> ; .)
    $end            reduce using rule 11 (stmt -> ; .)
    }               reduce using rule 11 (stmt -> ; .)
    ELSE            reduce using rule 11 (stmt -> ; .)


state 7

    (4) stmt -> CONTINUE . ;
    ;               shift and go to state 43


state 8

    (5) stmt -> BREAK . ;
    ;               shift and go to state 44


state 9

    (6) stmt -> print_stmt .
    {               reduce using rule 6 (stmt -> print_stmt .)
    RETURN          reduce using rule 6 (stmt -> print_stmt .)
    CONTINUE        reduce using rule 6 (stmt -> print_stmt .)
    BREAK           reduce using rule 6 (stmt -> print_stmt .)
    ;               reduce using rule 6 (stmt -> print_stmt .)
    PRINT           reduce using rule 6 (stmt -> print_stmt .)
    FOR             reduce using rule 6 (stmt -> print_stmt .)
    WHILE           reduce using rule 6 (stmt -> print_stmt .)
    IF              reduce using rule 6 (stmt -> print_stmt .)
    ID              reduce using rule 6 (stmt -> print_stmt .)
    $end            reduce using rule 6 (stmt -> print_stmt .)
    }               reduce using rule 6 (stmt -> print_stmt .)
    ELSE            reduce using rule 6 (stmt -> print_stmt .)


state 10

    (7) stmt -> assign_expr .
    {               reduce using rule 7 (stmt -> assign_expr .)
    RETURN          reduce using rule 7 (stmt -> assign_expr .)
    CONTINUE        reduce using rule 7 (stmt -> assign_expr .)
    BREAK           reduce using rule 7 (stmt -> assign_expr .)
    ;               reduce using rule 7 (stmt -> assign_expr .)
    PRINT           reduce using rule 7 (stmt -> assign_expr .)
    FOR             reduce using rule 7 (stmt -> assign_expr .)
    WHILE           reduce using rule 7 (stmt -> assign_expr .)
    IF              reduce using rule 7 (stmt -> assign_expr .)
    ID              reduce using rule 7 (stmt -> assign_expr .)
    $end            reduce using rule 7 (stmt -> assign_expr .)
    }               reduce using rule 7 (stmt -> assign_expr .)
    ELSE            reduce using rule 7 (stmt -> assign_expr .)


state 11

    (8) stmt -> for_stmt .
    {               reduce using rule 8 (stmt -> for_stmt .)
    RETURN          reduce using rule 8 (stmt -> for_stmt .)
    CONTINUE        reduce using rule 8 (stmt -> for_stmt .)
    BREAK           reduce using rule 8 (stmt -> for_stmt .)
    ;               reduce using rule 8 (stmt -> for_stmt .)
    PRINT           reduce using rule 8 (stmt -> for_stmt .)
    FOR             reduce using rule 8 (stmt -> for_stmt .)
    WHILE           reduce using rule 8 (stmt -> for_stmt .)
    IF              reduce using rule 8 (stmt -> for_stmt .)
    ID              reduce using rule 8 (stmt -> for_stmt .)
    $end            reduce using rule 8 (stmt -> for_stmt .)
    }               reduce using rule 8 (stmt -> for_stmt .)
    ELSE            reduce using rule 8 (stmt -> for_stmt .)


state 12

    (9) stmt -> while_stmt .
    {               reduce using rule 9 (stmt -> while_stmt .)
    RETURN          reduce using rule 9 (stmt -> while_stmt .)
    CONTINUE        reduce using rule 9 (stmt -> while_stmt .)
    BREAK           reduce using rule 9 (stmt -> while_stmt .)
    ;               reduce using rule 9 (stmt -> while_stmt .)
    PRINT           reduce using rule 9 (stmt -> while_stmt .)
    FOR             reduce using rule 9 (stmt -> while_stmt .)
    WHILE           reduce using rule 9 (stmt -> while_stmt .)
    IF              reduce using rule 9 (stmt -> while_stmt .)
    ID              reduce using rule 9 (stmt -> while_stmt .)
    $end            reduce using rule 9 (stmt -> while_stmt .)
    }               reduce using rule 9 (stmt -> while_stmt .)
    ELSE            reduce using rule 9 (stmt -> while_stmt .)


state 13

    (10) stmt -> if_stmt .
    {               reduce using rule 10 (stmt -> if_stmt .)
    RETURN          reduce using rule 10 (stmt -> if_stmt .)
    CONTINUE        reduce using rule 10 (stmt -> if_stmt .)
    BREAK           reduce using rule 10 (stmt -> if_stmt .)
    ;               reduce using rule 10 (stmt -> if_stmt .)
    PRINT           reduce using rule 10 (stmt -> if_stmt .)
    FOR             reduce using rule 10 (stmt -> if_stmt .)
    WHILE           reduce using rule 10 (stmt -> if_stmt .)
    IF              reduce using rule 10 (stmt -> if_stmt .)
    ID              reduce using rule 10 (stmt -> if_stmt .)
    $end            reduce using rule 10 (stmt -> if_stmt .)
    }               reduce using rule 10 (stmt -> if_stmt .)
    ELSE            reduce using rule 10 (stmt -> if_stmt .)


state 14

    (20) print_stmt -> PRINT . print_rek ;
    (21) print_rek -> . value
    (22) print_rek -> . print_rek , value
    (23) value -> . STRING
    (24) value -> . ID
    (25) value -> . FLOAT
    (26) value -> . INTNUM
    STRING          shift and go to state 42
    ID              shift and go to state 47
    FLOAT           shift and go to state 41
    INTNUM          shift and go to state 36

    print_rek                      shift and go to state 45
    value                          shift and go to state 46

state 15

    (45) assign_expr -> id_ref . DIVASSIGN expr ;
    (46) assign_expr -> id_ref . MULASSIGN expr ;
    (47) assign_expr -> id_ref . SUBASSIGN expr ;
    (48) assign_expr -> id_ref . ADDASSIGN expr ;
    (49) assign_expr -> id_ref . = matrix ;
    (50) assign_expr -> id_ref . = expr ;
    DIVASSIGN       shift and go to state 48
    MULASSIGN       shift and go to state 49
    SUBASSIGN       shift and go to state 50
    ADDASSIGN       shift and go to state 51
    =               shift and go to state 52


state 16

    (15) for_stmt -> FOR . ID = id_int : id_int stmt_braces
    ID              shift and go to state 53


state 17

    (52) id_ref -> ID .
    (68) matrix_ref -> ID . [ string_of_num ]
    DIVASSIGN       reduce using rule 52 (id_ref -> ID .)
    MULASSIGN       reduce using rule 52 (id_ref -> ID .)
    SUBASSIGN       reduce using rule 52 (id_ref -> ID .)
    ADDASSIGN       reduce using rule 52 (id_ref -> ID .)
    =               reduce using rule 52 (id_ref -> ID .)
    [               shift and go to state 54


state 18

    (14) while_stmt -> WHILE . ( bool_expr ) stmt_braces
    (               shift and go to state 55


state 19

    (12) if_stmt -> IF . ( bool_expr ) stmt_braces
    (13) if_stmt -> IF . ( bool_expr ) stmt_braces ELSE stmt_braces
    (               shift and go to state 56


state 20

    (51) id_ref -> matrix_ref .
    DIVASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    MULASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    SUBASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    ADDASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    =               reduce using rule 51 (id_ref -> matrix_ref .)


state 21

    (2) statements -> statements stmt_braces .
    {               reduce using rule 2 (statements -> statements stmt_braces .)
    RETURN          reduce using rule 2 (statements -> statements stmt_braces .)
    CONTINUE        reduce using rule 2 (statements -> statements stmt_braces .)
    BREAK           reduce using rule 2 (statements -> statements stmt_braces .)
    ;               reduce using rule 2 (statements -> statements stmt_braces .)
    PRINT           reduce using rule 2 (statements -> statements stmt_braces .)
    FOR             reduce using rule 2 (statements -> statements stmt_braces .)
    WHILE           reduce using rule 2 (statements -> statements stmt_braces .)
    IF              reduce using rule 2 (statements -> statements stmt_braces .)
    ID              reduce using rule 2 (statements -> statements stmt_braces .)
    $end            reduce using rule 2 (statements -> statements stmt_braces .)
    }               reduce using rule 2 (statements -> statements stmt_braces .)


state 22

    (19) stmt_braces -> { statements . }
    (2) statements -> statements . stmt_braces
    (18) stmt_braces -> . stmt
    (19) stmt_braces -> . { statements }
    (3) stmt -> . RETURN expr ;
    (4) stmt -> . CONTINUE ;
    (5) stmt -> . BREAK ;
    (6) stmt -> . print_stmt
    (7) stmt -> . assign_expr
    (8) stmt -> . for_stmt
    (9) stmt -> . while_stmt
    (10) stmt -> . if_stmt
    (11) stmt -> . ;
    (20) print_stmt -> . PRINT print_rek ;
    (45) assign_expr -> . id_ref DIVASSIGN expr ;
    (46) assign_expr -> . id_ref MULASSIGN expr ;
    (47) assign_expr -> . id_ref SUBASSIGN expr ;
    (48) assign_expr -> . id_ref ADDASSIGN expr ;
    (49) assign_expr -> . id_ref = matrix ;
    (50) assign_expr -> . id_ref = expr ;
    (15) for_stmt -> . FOR ID = id_int : id_int stmt_braces
    (14) while_stmt -> . WHILE ( bool_expr ) stmt_braces
    (12) if_stmt -> . IF ( bool_expr ) stmt_braces
    (13) if_stmt -> . IF ( bool_expr ) stmt_braces ELSE stmt_braces
    (51) id_ref -> . matrix_ref
    (52) id_ref -> . ID
    (68) matrix_ref -> . ID [ string_of_num ]
    }               shift and go to state 57
    {               shift and go to state 4
    RETURN          shift and go to state 5
    CONTINUE        shift and go to state 7
    BREAK           shift and go to state 8
    ;               shift and go to state 6
    PRINT           shift and go to state 14
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    IF              shift and go to state 19
    ID              shift and go to state 17

    stmt_braces                    shift and go to state 21
    stmt                           shift and go to state 3
    print_stmt                     shift and go to state 9
    assign_expr                    shift and go to state 10
    for_stmt                       shift and go to state 11
    while_stmt                     shift and go to state 12
    if_stmt                        shift and go to state 13
    id_ref                         shift and go to state 15
    matrix_ref                     shift and go to state 20

state 23

    (3) stmt -> RETURN expr . ;
    (59) matrix_bin_expr -> expr . DOTDIV expr
    (60) matrix_bin_expr -> expr . DOTMUL expr
    (61) matrix_bin_expr -> expr . DOTSUB expr
    (62) matrix_bin_expr -> expr . DOTADD expr
    (53) relation_expr -> expr . NEQ expr
    (54) relation_expr -> expr . EQ expr
    (55) relation_expr -> expr . GTE expr
    (56) relation_expr -> expr . LTE expr
    (57) relation_expr -> expr . GT expr
    (58) relation_expr -> expr . LT expr
    (41) bin_expr -> expr . DIV expr
    (42) bin_expr -> expr . MUL expr
    (43) bin_expr -> expr . SUB expr
    (44) bin_expr -> expr . ADD expr
    ;               shift and go to state 58
    DOTDIV          shift and go to state 59
    DOTMUL          shift and go to state 60
    DOTSUB          shift and go to state 61
    DOTADD          shift and go to state 62
    NEQ             shift and go to state 63
    EQ              shift and go to state 64
    GTE             shift and go to state 65
    LTE             shift and go to state 66
    GT              shift and go to state 67
    LT              shift and go to state 68
    DIV             shift and go to state 69
    MUL             shift and go to state 70
    SUB             shift and go to state 71
    ADD             shift and go to state 72


state 24

    (30) expr -> matrix_ref .
    (51) id_ref -> matrix_ref .
    ;               reduce using rule 30 (expr -> matrix_ref .)
    DOTDIV          reduce using rule 30 (expr -> matrix_ref .)
    DOTMUL          reduce using rule 30 (expr -> matrix_ref .)
    DOTSUB          reduce using rule 30 (expr -> matrix_ref .)
    DOTADD          reduce using rule 30 (expr -> matrix_ref .)
    NEQ             reduce using rule 30 (expr -> matrix_ref .)
    EQ              reduce using rule 30 (expr -> matrix_ref .)
    GTE             reduce using rule 30 (expr -> matrix_ref .)
    LTE             reduce using rule 30 (expr -> matrix_ref .)
    GT              reduce using rule 30 (expr -> matrix_ref .)
    LT              reduce using rule 30 (expr -> matrix_ref .)
    DIV             reduce using rule 30 (expr -> matrix_ref .)
    MUL             reduce using rule 30 (expr -> matrix_ref .)
    SUB             reduce using rule 30 (expr -> matrix_ref .)
    ADD             reduce using rule 30 (expr -> matrix_ref .)
    )               reduce using rule 30 (expr -> matrix_ref .)
    DIVASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    MULASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    SUBASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    ADDASSIGN       reduce using rule 51 (id_ref -> matrix_ref .)
    =               reduce using rule 51 (id_ref -> matrix_ref .)


state 25

    (31) expr -> matrix_funcs .
    ;               reduce using rule 31 (expr -> matrix_funcs .)
    DOTDIV          reduce using rule 31 (expr -> matrix_funcs .)
    DOTMUL          reduce using rule 31 (expr -> matrix_funcs .)
    DOTSUB          reduce using rule 31 (expr -> matrix_funcs .)
    DOTADD          reduce using rule 31 (expr -> matrix_funcs .)
    NEQ             reduce using rule 31 (expr -> matrix_funcs .)
    EQ              reduce using rule 31 (expr -> matrix_funcs .)
    GTE             reduce using rule 31 (expr -> matrix_funcs .)
    LTE             reduce using rule 31 (expr -> matrix_funcs .)
    GT              reduce using rule 31 (expr -> matrix_funcs .)
    LT              reduce using rule 31 (expr -> matrix_funcs .)
    DIV             reduce using rule 31 (expr -> matrix_funcs .)
    MUL             reduce using rule 31 (expr -> matrix_funcs .)
    SUB             reduce using rule 31 (expr -> matrix_funcs .)
    ADD             reduce using rule 31 (expr -> matrix_funcs .)
    )               reduce using rule 31 (expr -> matrix_funcs .)


state 26

    (32) expr -> matrix_transpose .
    ;               reduce using rule 32 (expr -> matrix_transpose .)
    DOTDIV          reduce using rule 32 (expr -> matrix_transpose .)
    DOTMUL          reduce using rule 32 (expr -> matrix_transpose .)
    DOTSUB          reduce using rule 32 (expr -> matrix_transpose .)
    DOTADD          reduce using rule 32 (expr -> matrix_transpose .)
    NEQ             reduce using rule 32 (expr -> matrix_transpose .)
    EQ              reduce using rule 32 (expr -> matrix_transpose .)
    GTE             reduce using rule 32 (expr -> matrix_transpose .)
    LTE             reduce using rule 32 (expr -> matrix_transpose .)
    GT              reduce using rule 32 (expr -> matrix_transpose .)
    LT              reduce using rule 32 (expr -> matrix_transpose .)
    DIV             reduce using rule 32 (expr -> matrix_transpose .)
    MUL             reduce using rule 32 (expr -> matrix_transpose .)
    SUB             reduce using rule 32 (expr -> matrix_transpose .)
    ADD             reduce using rule 32 (expr -> matrix_transpose .)
    )               reduce using rule 32 (expr -> matrix_transpose .)


state 27
